--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body {
   
 }
 
-.value { /*tipografia relogio*/
+.value { /*tipografia relogio/*/
     font-size: 60px;
     font-weight: bold; 
     color: #ffffff;
